--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,8 @@
 <p>My first paragraph.</p>
 <a href="index.html"><img src="images/seoul.jpg"height="100" width="200"alt="seoul"></a>
 <a href=index.html"><img src="images/Love-locks.jpg"height="200" width="350"alt="seoul love"></a>
-
-
-
+<a href=index.html"><img src="images/Love-locks.jpg"height="200" width="350"alt="seoul love"></a>
+<a href=index.html"><img src="images/Love-locks.jpg"height="200" width="350"alt="seoul love"></a>
 
 </body>
 </html>
